tests/fail/semantic/product_type_mismatch_infix_op.cyt
atom Result(val: int)

enzyme InvalidInfixOp[] -> Result(val: 12 + "string")

enzyme ValidInfixOp[] -> Result(val: 12 + 42) // this is valid

// args: --no-colour

// expected stderr:
// error: cannot apply infix operator `+` to types `int` and `string`
//   ┌─ ../tests/fail/semantic/product_type_mismatch_infix_op.cyt:3:43
//   │
// 3 │ enzyme InvalidInfixOp[] -> Result(val: 12 + "string")
//   │                                        -- ^ -------- this expression has type `string`
//   │                                        │  │  
//   │                                        │  this infix operator is incompatible with types `int` and `string`
//   │                                        this expression has type `int`
//   │
//   = the infix operator `+` is compatible with:
//     - type `int` and `int`
//     - type `string` and `string`